<resources>
    <string name="app_name">Soul Friend</string>
    <string name="original_horse">لفظ أصيل يطلق علي الحصان النقى الغير خليط و يستخدم الحصان الأصيل في مسابقات الخيل و الأصالة في الخيل لا تقتصر علي خيول العربية فقط بل الأصالة موجودة أيضا في الخيول الأنجليزية</string>
    <string name="horse_language">كل حركة في جسم الحصان تدل علي معنى معين مما يساعد الفارس علي القرب أكثر من حصانه لأن الفروسية ليست مجرد تدريب فقط لكنها علاقة صداقة بين الفارس و الحصان فالاذان الموجهه الي الامام تشير الي ان الحصان في حالة من الاسترخاء او قد يشير الي انه مهتم ومتحمس لشي ما او يشعر بالتهديد من أمر حوله ولكن في حالة التهديد الفرق يكون في عينه وأنفع حيث تتسع عيناه وانفه مع توجيه أذنيه الي الامام.فالاذان المفروده الي الخلف، تشير الي ان حصانك منزعج من أمر ما فاانا كنت بالقرب منه في تلك اللحظه راعي ان تكون هناك مسافه امينه بينك وبينه حتى لا تتعرض للاذي
اذا كانت هناك اذن واحده متجهه  الي الخلف ففي هذه الحاله هو يستمع الي شي وراه.
اما ان كانت اذناه متجهتين الي الجانبين ،فهذا يعني انه لا يزال في حالة تركيز ولم يسترخ بعد.  </string>
    <string name="t1">هذه الرياضه تتطلب التنقل بين الحواجز في ملعب مخصص لذلك. ففي القفز الاستعراضي يتم اختبار القدرة على التحمل والسرعه والمرونه للحصان الي جانب العلاقه بين الفارس والحصان ثم يتم تحديد الفائزين اعتمادا على أقل عدد من الأخطاء ال متراكمه ومعدل السرعه لاكمال الدورة.</string>
    <string name="t2">يعرف الاتحاد الدولي الفروسيه الدريساج بأنه، اهم تعبير عن تدريب الخيول حيث يتوقع من الخيول والفارس أداء سلس من الحركات المحدده عبر الذاكره وبعد الترويض رياضة تنافسيه وفنيه. والغرض الرئيسي منه هو تطوير قدرة الخيول الرياضيه وادائها. من خلال أساليب تدريبيه تدريجيه موحدة وبالتالي تعظيم إمكانياتها.</string>
    <string name="t3">تقوم على استخدام السلاح فوق الخيل  والتقاط الاوتاد بالرمح او بسيف وهيا رياضه عربيه كان يستخدمها الفرسان قديما  أثناء الحروب حيث يكون الفارس على حصانه ويستخدم السيف او الرمح لكسر الوتد الموجود في الخانه او الأرض.</string>
    <string name="t4">لعبة جماعيه يتم مارستها فوق الخيول وتلعب على البوني وهذفها تسجيل الأهداف ضد فريق معارض
رياضة التحمل :
تتم على مسافه محدده وتبدا الخيول من نقطة بدايه واحده باول السباق  وعاده ما تكون سباقات مستوى أعلى من ٥٠ ل ١٠٠ ميل فوق التضاريس الجبليه او غيرها.</string>
    <string name="t5">سميه بسباق الجري ولكن يختلف عنه في تعدد مراحله إذ يتم الكشف على الحصان في كل مرحله من قبل الأطباء متخصصين لقياس نبضات قلبه فإذا تجاوزت الحد المتفق عليه يتم تغير الحصان.</string>
    <string name="t6">تنقسم الي العديد من النشاطات التي تشمل الركوب دول سرج وركوب البرونك
من اعنف النشاطات ويقيم على بناء الراكب علي سيطرته أثناء الركوب وأسلوبه
اما ركوب البرونك فهو حدث كلاسيكي يتنافس االمشاركون يتنافس االمشاركون في من يقدم افضل عرض أثناء ركوب الخيل التمرد ويحصل الراكب الذي تتناغم حركته مع الخيل على  درجة عاليه.</string>
    <string name="t7">سباق يشارك فيه عدد كبير من الفرسان يتوج فيه الفائز لدي اجتياز المسافه المطلوبه في زمن قياسي
والهدف منها تساعد على تعزيز العقل والجسم.
تعلم الصبر والتواضع.
تحتاج لصفاء ذهن وتركيز.
تختبر مهارة الفارس في استخدام السيف والرمح والطعن</string>
</resources>